Updated hoek dependency and README.md
 Changes to be committed:
	modified:   README.md
	modified:   package-lock.json
	modified:   package.json

--- a/package.json
+++ b/package.json
@@ -26,5 +26,7 @@
     "gulp-sass": "^4.0.1",
     "gulp-sourcemaps": "^2.6.4"
   },
-  "dependencies": {}
+  "dependencies": {
+    "hoek": "^4.2.1"
+  }
 }
